Modificar la GUI y el código para forzar los tres primeros octetos

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,13 @@
 [IP_PREFIX]
 octet_one = 192
 octet_two = 168
+octet_three = 100
 
 [REPORT]
-frequency = Live
+frequency = live
 
 [DISCOVERY]
-type = ARP
+type = UDP
 
 [THREADS]
 count = 64
